crates/pixi-build-cmake/src/snapshots/pixi_build_cmake__build_script__test__build_script@windows-nopython.snap
---
source: crates/pixi-build-cmake/src/build_script.rs
expression: "script.join(\"\\n\")"
---
ninja --version
cmake --version

if not exist build mkdir build
pushd build

if not exist build.ninja (
    cmake %CMAKE_ARGS% ^
        -GNinja ^
        -S "%SRC_DIR%" ^
        -DCMAKE_BUILD_TYPE=Release ^
        -DCMAKE_INSTALL_PREFIX=%LIBRARY_PREFIX% ^
        -DCMAKE_EXPORT_COMPILE_COMMANDS=ON ^
        -DBUILD_SHARED_LIBS=ON
    @if errorlevel 1 exit 1
)

cmake --build . --target install
@if errorlevel 1 exit 1
